Added FireBase for frontend production release