@@ -13,7 +13,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static com.Kick.Kick.SecurityConstants.SIGN_IN_URL;
@@ -64,7 +63,7 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
     CorsConfiguration config = new CorsConfiguration().applyPermitDefaultValues();
     config.setAllowedMethods(Arrays.asList("GET", "PUT", "DELETE", "POST"));
     config.setExposedHeaders(List.of("Authorization"));
-    config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+    config.setAllowedOrigins(List.of("https://kick-a7a7f.web.app"));
     source.registerCorsConfiguration("/**", config);
     return source;
   }
